# Box

./: .config.toml  Cargo.toml  README.md  Trunk.toml  boxy-1da2c913dfa76f3b.js  index.html  style-7b523b2b29fe4a14.css  style.css
.cargo/: config.toml
.github/workflows/: deploy-gh-pages.yml  main.yml
src/: actions.rs  camera.rs  character.rs  character_state.rs  controller.rs  lib.rs  main.rs
src/camera/: camera.rs  camera_action.rs  camera_movement.rs  camera_plugin.rs  camera_state.rs  mod.rs
src/controller/: controller.rs  controller_actions.rs  controller_movement.rs  controller_settings.rs  controller_state.rs  mod.rs
src/physics/: physics.rs
