[package]
name = "boxxed"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_rapier3d = { version = "0.19.0", features = [ "simd-stable", "debug-render" ] }
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless", features = ["states", "app", "fixedtimestep"] }
leafwing-input-manager = "0.7.0"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
