[package]
name = "boxy"
version = "0.11.2"
edition = "2021"

[dependencies]
bevy = { version = "0.11.2", features = [ "dynamic_linking", "wayland"]}
bevy_rapier3d = {version = "0.22.0", features = [ "simd-stable", "debug-render" ]  }
leafwing-input-manager = "0.10.0"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
