[package]
name = "boxy"
version = "0.11.2"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" }
bevy_rapier3d = {version = "0.23.0", features = [ "wasm-bindgen", "simd-stable", "debug-render" ]  }
leafwing-input-manager = "0.11.2"

[profile.release]
opt-level = 2 

[profile.dev.package."*"]
opt-level = 3
